Visual updates for filter on mobile + fixed image not showing in playlist + removed search input from playlists overview

--- a/src/components/domain/archive/playlists/header.module.scss
+++ b/src/components/domain/archive/playlists/header.module.scss
@@ -54,14 +54,20 @@
   .image-section {
     flex-basis: 50%;
     flex-shrink: 0;
+    position: relative;
 
-    img {
-      object-fit: cover;
-      float: right;
-      max-width: 100%;
-      height: 100%;
+    > * {
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      left: 0px;
+      bottom: 0px;
+      // float: right;
+      // max-width: 100%;
+      // height: 100%;
 
       @media (max-width: $breakpoints-md) {
+        position: relative;
         width: 100%;
         float: none;
       }
